<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="redexp.ua.redexp.viewmodel.MainViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar"
            app:title="@{@string/choose_programm}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvRunning"
                    style="@style/CardView.LargeItem"
                    android:onClick="onClickRunning">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:foreground="@color/alpha_light">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@raw/running_back"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:text="@string/running"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvWalking"
                    style="@style/CardView.LargeItem"
                    android:onClick="onClickWalking">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:foreground="@color/alpha_light">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@raw/walking_back"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:text="@string/walking"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvCycling"
                    style="@style/CardView.LargeItem"
                    android:onClick="onClickCycling">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:foreground="@color/alpha_light">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@raw/cycling_back"/>
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_normal"
                        android:text="@string/cycling"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>