<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="redexp.ua.redexp.viewmodel.SessionViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="@dimen/spacing_normal">

        <TextView
            style="@style/AppTheme.TextViewSessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text='@{viewModel.speed + " km/h"}'/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{viewModel.timer}"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:textStyle="bold"
            tools:text="10 10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_calory"
                android:tint="@color/colorAccent"/>

            <TextView
                style="@style/AppTheme.TextViewSessions"
                android:text="@{viewModel.calories}"
                tools:text="0"/>

            <TextView
                style="@style/AppTheme.TextViewSessions"
                android:layout_weight="1"
                android:text="@string/calories"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_foot"
                android:tint="@color/colorAccent"/>

            <TextView
                style="@style/AppTheme.TextViewSessions"
                android:text="@{viewModel.steps}"
                tools:text="0"/>

            <TextView
                style="@style/AppTheme.TextViewSessions"
                android:layout_weight="1"
                android:text="@string/steps"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_distance"
                android:tint="@color/colorAccent"/>

            <TextView
                style="@style/AppTheme.TextViewSessions"
                android:text="@{viewModel.distance}"
                tools:text="0"/>

            <TextView
                style="@style/AppTheme.TextViewSessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/distance"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:liteMode="false"
                app:mapType="normal"
                tools:visibility="visible"/>
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_margin="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_normal"
                android:onClick="@{viewModel.onClickPlayPause}"
                android:src="@{viewModel.isPaused ? @drawable/ic_play : @drawable/ic_pause}"
                android:tint="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                tools:src="@drawable/ic_pause"/>
        </FrameLayout>

    </LinearLayout>

</layout>
